--- a/MAKEFILE
+++ b/MAKEFILE
@@ -26,6 +26,14 @@ _XE8: Lib\*.pas "Package\RAD Studio XE8\$(PROJECT)R.dpk" "Package\RAD Studio XE8
 	$(BUILD) /property:Platform=Win64 "Packages\RAD Studio 10.2\$(PROJECT)R.dproj"
 	$(MAKE) _samples
 
+# build all packahes for Delphi 10.3
+10_3: Source\*.pas "Packages\RAD Studio 10.3\$(PROJECT)R.dpk" "Packages\RAD Studio 10.3\$(PROJECT)R.dproj" "Packages\RAD Studio 10.3\$(PROJECT)D.dpk" "Packages\RAD Studio 10.3\$(PROJECT)D.dproj"
+	SET BDS=$(STUDIO)\20.0
+	$(BUILD) "Packages\RAD Studio 10.3\$(PROJECT)R.dproj"
+	$(BUILD) "Packages\RAD Studio 10.3\$(PROJECT)D.dproj"
+	$(BUILD) /property:Platform=Win64 "Packages\RAD Studio 10.3\$(PROJECT)R.dproj"
+	$(MAKE) _samples
+
 "Demos\Advanced\Advanced.exe": "Demos\Advanced\*.dproj" "Demos\Advanced\*.dpr" "Demos\Advanced\*.pas"
 	$(BUILD) "Demos\Advanced\Advanced.dproj"
 
@@ -40,7 +48,7 @@ _XE8: Lib\*.pas "Package\RAD Studio XE8\$(PROJECT)R.dpk" "Package\RAD Studio XE8
 
 _samples: "Demos\Advanced\Advanced.exe" "Demos\Minimal\Minimal.exe" "Demos\Objects\Objects.exe" "Demos\OLE\OLE.exe"
 	
-_continuousbuilds: clean 10_2
+_continuousbuilds: clean 10_3
 
 _release:
 #This small batch file is intended to create a source code release file of the VirtualTreeView as ZIP archive
