--- a/Packages/RAD Studio 10.3/VirtualTreesR.dproj
+++ b/Packages/RAD Studio 10.3/VirtualTreesR.dproj
@@ -7,7 +7,7 @@
         <AppType>Package</AppType>
         <FrameworkType>VCL</FrameworkType>
         <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-        <ProjectVersion>18.5</ProjectVersion>
+        <ProjectVersion>18.8</ProjectVersion>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>3</TargetedPlatforms>
     </PropertyGroup>
@@ -90,6 +90,16 @@
         <DCCReference Include="..\..\Source\VirtualTrees.Actions.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Export.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Utils.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Types.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Constants.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Header.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Columns.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Options.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DataObject.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DragnDrop.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DragImage.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.EditLink.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Colors.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -137,7 +147,7 @@
                     <VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys>
                     <VersionInfoKeys Name="Comments"/>
                 </VersionInfoKeys>
-                <Excluded_Packages />
+                <Excluded_Packages/>
             </Delphi.Personality>
             <Platforms>
                 <Platform value="Win32">True</Platform>
