--- a/Packages/RAD Studio XE3/VirtualTreesR.dproj
+++ b/Packages/RAD Studio XE3/VirtualTreesR.dproj
@@ -109,12 +109,12 @@
         <DCCReference Include="..\..\Source\VirtualTrees.Types.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Header.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Columns.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.Options.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.DataObject.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.DragnDrop.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.DragImage.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.EditLink.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Colors.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DrawTree.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
