--- a/Packages/RAD Studio 10.4+/VirtualTreesR.dproj
+++ b/Packages/RAD Studio 10.4+/VirtualTreesR.dproj
@@ -65,17 +65,25 @@
         </DelphiCompile>
         <DCCReference Include="vcl.dcp"/>
         <DCCReference Include="vclx.dcp"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.HeaderPopup.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.AccessibilityFactory.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Accessibility.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.StyleHooks.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.Classes.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.WorkerThread.pas"/>
-        <DCCReference Include="..\..\Source\VirtualTrees.ClipBoard.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.AccessibilityFactory.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Actions.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Classes.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.ClipBoard.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Colors.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DataObject.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DragImage.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DragnDrop.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.DrawTree.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.EditLink.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Export.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Header.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.HeaderPopup.pas"/>
+        <DCCReference Include="..\..\source\VirtualTrees.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.StyleHooks.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.Types.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Utils.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.WorkerThread.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -134,4 +142,5 @@
     </ProjectExtensions>
     <Import Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')" Project="$(BDS)\Bin\CodeGear.Delphi.Targets"/>
     <Import Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')" Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj"/>
+    <Import Project="$(MSBuildProjectName).deployproj" Condition="Exists('$(MSBuildProjectName).deployproj')"/>
 </Project>
