--- a/Packages/RAD Studio 10.3/VirtualTreesR.dproj
+++ b/Packages/RAD Studio 10.3/VirtualTreesR.dproj
@@ -98,6 +98,9 @@
         <DCCReference Include="..\..\Source\VirtualTrees.EditLink.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.Colors.pas"/>
         <DCCReference Include="..\..\Source\VirtualTrees.DrawTree.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.AncestorVcl.pas"/>
+        <DCCReference Include="..\..\Source\VirtualTrees.BaseAncestorVcl.pas"/>
+        <DCCReference Include="..\..\source\VirtualTrees.BaseTree.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
